2009-12-14  Armando Basile  <hmandevteam@gmail.com>

	* src/BaseFactory.cs:
	* themonospot-base.csproj:
	* src/ThemonospotLogger.cs: 

	- shared connection of trace file stream

2009-12-14  Armando Basile  <hmandevteam@gmail.com>

	* themonospot-base.csproj: 

	- added license file

2009-12-13  Armando Basile  <hmandevteam@gmail.com>

	* readme:
	* languages/spanish.xml:
	* themonospot-base.pidb:
	* themonospot-base.csproj: 

	- added spanish language file
	- bug fix: missing sign to release config of themonospot-base

2009-12-13  Armando Basile  <hmandevteam@gmail.com>

	* properties/AssemblyInfo.cs: 

	- added sign to project file and removed from AssemblyInfo