@@ -61,15 +61,9 @@
     <Folder Include="src\exceptions\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="languages\english.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="languages\italiano.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="languages\spanish.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="languages\english.xml" />
+    <None Include="languages\italiano.xml" />
+    <None Include="languages\spanish.xml" />
     <None Include="copying.gpl" />
     <None Include="readme" />
   </ItemGroup>
