@@ -4,6 +4,14 @@
 	* themonospot-base.csproj:
 	* src/ThemonospotLogger.cs: 
 
+	- changes for tarball config
+
+2009-12-14  Armando Basile  <hmandevteam@gmail.com>
+
+	* src/BaseFactory.cs:
+	* themonospot-base.csproj:
+	* src/ThemonospotLogger.cs: 
+
 	- shared connection of trace file stream
 
 2009-12-14  Armando Basile  <hmandevteam@gmail.com>
